--- a/index.html
+++ b/index.html
@@ -10,35 +10,52 @@
 </head>
 <body>
 <div class="wrapper">
-    <h1 class="title">
+    <h1 class="title title-1">
         Далеко-далеко.
     </h1>
-    <p class="text1">
+    <p class="text-1">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
         dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
         possimus, provident quam, qui quod soluta voluptate
         Ad blanditiis corporis esse laudantium minus obcaecati placeat quam quidem.
         Numquam, sint, totam. Dignissimos ducimus eum facere illum ipsum laborum
     </p>
-    <h2 class="title2">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
-        dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
-        possimus, provident quam, qui quod soluta voluptate
+    <h2 class=" title title-2">
+        <p class="text-2">
+            Далек-далеко за словесными Далек-далеко за словесными Далек-далеко за
+            словесными
+        </p>
     </h2>
     <img src="https://dummyimage.com/800x300/000/fff" alt="" class="images">
-    <p class="text3">
+    <p class="text-3">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
         dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
         possimus, provident quam, qui quod soluta voluptate
     </p>
-    <p class="text4">
+    <p class="text-4">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
         dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
         possimus, provident quam, qui quod soluta voluptate
     </p>
     <ul class="list">
-        <li></li>
+        <li>Далек-далеко за словесными</li>
+        <li>Далек-далеко за словесными</li>
+        <li>Далек-далеко за словесными</li>
+        <li>Далек-далеко за словесными</li>
+        <li>Далек-далеко за словесными</li>
     </ul>
+    <image src="https://dummyimage.com/800x200/000/fff" class="images2" alt=""></image>
+    <p class="text5">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
+        dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
+        possimus, provident quam, qui quod soluta voluptate
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
+        dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
+        possimus, provident quam, qui quod soluta voluptate
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
+        dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
+        possimus, provident quam, qui quod soluta voluptate
+    </p>
 </div>
 </body>
 </html>
