--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             словесными
         </p>
     </h2>
-    <img src="https://dummyimage.com/800x300/000/fff" alt="" class="images">
+    <img src="https://dummyimage.com/800x300/000/fff" alt="" class="image-1">
     <p class="text-3">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
         dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
