flex теория правила

--- a/index.html
+++ b/index.html
@@ -7,58 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Start html</title>
 
-    <link rel="stylesheet" href="css/reset.css">
+    <!--    <link rel="stylesheet" href="css/reset.css">-->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
 <div class="wrapper">
-    <h1 class="title title-1">
-        Далеко-далеко.
-    </h1>
-    <p class="text-1">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
-        dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
-        possimus, provident quam, qui quod soluta voluptate
-        Ad blanditiis corporis esse laudantium minus obcaecati placeat quam quidem.
-        Numquam, sint, totam. Dignissimos ducimus eum facere illum ipsum laborum
-    </p>
-    <h2 class=" title title-2">
-        <p class="text-2">
-            Далек-далеко за словесными Далек-далеко за словесными Далек-далеко за
-            словесными
-        </p>
-    </h2>
-    <img src="https://dummyimage.com/800x300/000/fff" alt="" class="image-1">
-    <p class="text-3">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
-        dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
-        possimus, provident quam, qui quod soluta voluptate
-    </p>
-    <p class="text-4">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
-        dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
-        possimus, provident quam, qui quod soluta voluptate
-    </p>
-    <ul class="list">
-        <li>Далек-далеко за словесными</li>
-        <li>Далек-далеко за словесными</li>
-        <li>Далек-далеко за словесными</li>
-        <li>Далек-далеко за словесными</li>
-        <li>Далек-далеко за словесными</li>
-    </ul>
-    <image src="https://dummyimage.com/800x200/000/fff" class="images2" alt=""></image>
-    <p class="text5">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
-        dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
-        possimus, provident quam, qui quod soluta voluptate
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
-        dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
-        possimus, provident quam, qui quod soluta voluptate
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aperiam, at corporis
-        dolor dolore doloribus eius itaque libero modi nobis officiis omnis placeat
-        possimus, provident quam, qui quod soluta voluptate
-    </p>
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
+    <div class="box">4</div>
+    <div class="box">5</div>
+    <div class="box">6</div>
+    <div class="box">7</div>
+    <div class="box">8</div>
+    <div class="box">9</div>
 </div>
 </body>
 </html>
